# zenanalyze

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  Cross.toml  MIGRATION.md  MIGRATION_PLAN.md  README.md  everything.md  justfile  recovery_cycle_summary_2026-05-13.md  zensim_champion_log.md
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
benchmarks/: aggprune_zenjpeg_negative_result_2026-05-17.md  all_time_best_features_2026-05-02.md  argmin_vs_zerobias_2026-05-18.md  autonomous_session_summary_2026-05-17.md  content_classifier_v0.2_2026-05-06.manifest.json  content_classifier_v0.2_2026-05-06.md  cross_codec_aggregate_2026-05-02.md  dense_percentile_sweep_2026-05-07.md  dispatch_gate_validation_2026-06-04.tsv  dispatch_perf_2026-06-04.tsv  dispatch_perf_small_2026-06-05.tsv  end_to_end_pareto_simulation_2026-05-06.md  experimental_maturity_audit_2026-06-13.md  feat_xform_2026-05-17_summary.md  feat_xform_phaseB_defaults_2026-05-17.md  feat_xform_screen_metrics_2026-05-17.md  feat_xform_stacks_2026-05-17_negative_result.md  feature_groups_2026-05-02.md  feature_groups_2026-05-02.py  feature_groups_cross_codec_2026-05-02.md  feature_groups_zenjxl_lossy_clusters_2026-05-02.tsv  feature_groups_zenwebp_clusters_2026-05-02.tsv  feature_redundancy_clusters_2026-06-13.json  feature_redundancy_clusters_2026-06-13.md  feature_subset_2026-05-03.md  hard_example_weighting_2026-05-17.md  holdout_ab_harness_template.md  hvs_feature_proposals_2026-05-17.md  hvs_features_picker_eval_2026-05-17.md  imazen26_budget_select_2026-06-14.md  imazen26_budget_select_2026-06-14.py  imazen26_cluster_ablation_2026-06-14.md  imazen26_cluster_ablation_2026-06-14.py  imazen26_features_2026-06-13.pointer.md  imazen26_train_corpus_2026-06-14.pointer.md  inter_metric_analysis_2026-05-18.md  joint_finetune_5seed_2026-05-18.md  joint_pretrain_breakthrough_2026-05-17.md  loo_cross_codec_consensus_2026-05-03.md  loo_cross_codec_consensus_2026-05-03.py  (+100 more)
docs/: HANDOFF-2026-05-04.md  PICKER_LIB_MIGRATION.md  RECOVERY_REGISTER_2026-05-08.md  calibration-corpus-2026-04-27.md  ecosystem_cleanliness_review_2026-05-17.md  external-caller-pattern.md  jxl-picker-investigation-2026-05-04.md  jxl-picker-v06-summary-2026-05-04.md  multi-codec-external-caller-pattern.md  r2-zentrain-layout.md
examples/: augment_features_with_hvs.rs  corpus_eval.rs  dispatch_perf.rs  (+12 more)
zenpicker/: CHANGELOG.md  Cargo.toml  FOR_NEW_CODECS.md  README.md  SAFETY_PLANE.md  STATUS.md
zenpicker-train/: Cargo.toml  README.md
zenpicker-train/recipes/: METHODOLOGY_zenpredict_caps_2026-06-01.md  dial_quality_2026-06-01.md  parity_adapter_2026-06-09.py  picker_ablation_2026-06-01.md  picker_ablation_deaddrop_2026-06-01.json  picker_ablation_importance_2026-06-01.tsv  picker_ablation_topk_2026-06-01.tsv  picker_zenjpeg_2026-06-01.pointer.md  rebuild_sourcefeat_parquet.py
zenpicker-train/scripts/: build_picker_parquet.py  cluster_sources.py  teacher_soft_targets.py  unified_to_zentrain.py
zenpicker-train/scripts/ablation/: ablation.py  build_dataset.py  build_topk_parquet.py  cv_topk.py  run_topk_retrain.sh
zenpicker-train/scripts/dial/: dial_quality.py  plot_dial.py
zenpicker-train/src/: bake.rs  distill.rs  eval.rs  input_shaping.rs  lib.rs  mlp.rs  model.rs  pareto_dataset.rs  parquet_input.rs  picker_eval.rs  search.rs
zenpicker-train/tests/: distill.rs  end_to_end.rs  picker_mlp.rs  scalar_targets.rs
zenpicker/examples/: hybrid_heads_codec_sketch.rs  i8_vs_f16_agreement.rs  load_baked_model.rs  load_meta_picker_v0_1.rs  zenjpeg_picker_config.py  zenwebp_picker_config.py
zenpicker/models/: zenjpeg_picker_v1.0_19feat.manifest.json  zenjpeg_picker_v1.1_8feat.manifest.json  zenjpeg_picker_v2.0_hybrid.manifest.json  zenjpeg_picker_v2.0_zensim_strict.manifest.json  zenjpeg_picker_v2.1_full.manifest.json  zenjpeg_picker_v2.1_zensim_strict.manifest.json
zenpicker/src/: error.rs  inference.rs  lib.rs  mask.rs  model.rs  rescue.rs  tests.rs
zenpicker/testdata/: zenjpeg_picker_v2.1_full.manifest.json
zenpicker/tools/: README.md  _picker_lib.py  capacity_sweep.py  diagnose_picker.py  feature_ablation.py  feature_group_ablation.py  holdout_size_sweep_probe.py  leakyrelu_experiment.py  leakyrelu_seeds_runner.py  size_invariance_probe.py  train_distill.py  train_distill_reduced.py  train_hybrid.py  validate_schema.py
zenpredict/: CHANGELOG.md  Cargo.toml  README.md  WIRE_FORMAT_V3_1.md  deny.toml
zenpredict-bake/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
zenpredict-bake/benches/: predict.rs
zenpredict-bake/examples/: argmin_vs_tau.rs  compare_bakes.rs  inspect_multi_codec.rs  lz4_first_parse_bench.rs  rebake_v3_1.rs
zenpredict-bake/src/: cli.rs  composer.rs  hu_reorder.rs  json.rs  lib.rs  optimize.rs  zero_bias.rs
zenpredict-bake/tests/: bake_roundtrip.rs  compression_and_perm.rs  feature_transform.rs  feature_transform_stacks.rs  json_bake.rs  lifecycle.rs  lz4_roundtrip.rs  multi_codec.rs  output_specs.rs  safety_summary.rs  scorer.rs
zenpredict-viz/: Cargo.toml  README.md  STATUS_2026-05-25.md  build.sh
zenpredict-viz/docs/: onnx_export.md
zenpredict-viz/src/: lib.rs
zenpredict-viz/tests/: forward_parity.rs  onnx_parity.rs
zenpredict-viz/web/: calibration_decoders.js  feature_catalog.json  feature_layout.js  index.html  main.js  sample_pack.json
zenpredict-viz/web/panels/: attribution.js  calibration.js  compare.js  forward.js  importance.js  scaler.js  summary.js  weights.js
zenpredict/docs/: ZNPR_V3.md  v0_2_review_2026-05-13.md
zenpredict/examples/: hybrid_heads_codec_sketch.rs  load_baked_model.rs
zenpredict/fuzz/: Cargo.toml
zenpredict/fuzz/fuzz_targets/: lz4_decompress.rs  parser_from_bytes.rs  predictor_predict.rs
zenpredict/src/: argmin.rs  bounds.rs  error.rs  feature_transform.rs  inference.rs  lib.rs  limits.rs  lz4_block.rs  metadata.rs  model.rs  multi_codec.rs  output_spec.rs  predictor.rs  rescue.rs  safety.rs  tests.rs  wire.rs
zenpredict/src/bake/: json.rs  mod.rs  v2.rs
zenpredict/tests/: json_bake.rs  lifecycle.rs  output_specs.rs
(+551 files in other folders)
