[package]
name = "zenanalyze"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
repository = "https://github.com/imazen/zenanalyze"
description = "Image content analyzers (variance, edges, chroma sharpness, DCT energy, derived likelihoods) for adaptive codec decisions. Pulls rows on demand from any zenpixels PixelSlice."
keywords = ["image", "analysis", "features", "codec", "saliency"]
categories = ["multimedia::images"]
authors = ["Lilith River <lilith@imazen.io>"]
rust-version = "1.93"
readme = "README.md"

[lib]
name = "zenanalyze"

[features]
default = []
# Opt-in to features whose mathematical definition or numeric scale
# may change in 0.1.x patches. Stable features (those with at least
# one in-tree consumer in coefficient / zenjpeg / zenwebp as of
# 0.1.0) ship without this flag; numeric drift on stable features is
# governed by the crate-level threshold contract тАФ `experimental` is
# for *structural* uncertainty (no consumer pinned the meaning yet,
# or the metric is research-stage).
experimental = []
# Opt-in to *classifier-style composite scores* тАФ features whose
# value is a hand-tuned combination of stable raw signals via
# weighted sums / mins / thresholds. Examples in 0.1.x:
# `TextLikelihood`, `ScreenContentLikelihood`, `NaturalLikelihood`,
# `LineArtScore`. The raw signals these consume are stable in 0.1.x;
# the *composite coefficients* are calibration-driven and will drift
# as the corpus-trained tuning matures.
composites = []

[dependencies]
zenpixels = { version = "0.2.11", default-features = false, features = ["imgref"] }
zenpixels-convert = { version = "0.2.11", default-features = false }
archmage = { version = "0.9.23", features = ["macros", "avx512", "testable_dispatch"] }
magetypes = { version = "0.9.23", features = ["avx512"] }
# `garb` provides SIMD pixel-format conversions (`rgba_to_rgb`,
# `bgra_to_rgb`, etc.) via `archmage::incant!` тАФ used by the
# `RowStream::StripAlpha8` fast path. Measured ~7├Ч speedup over the
# in-tree scalar strip on a 2048-px row (0.13 ┬╡s vs 0.94 ┬╡s at 4 MP).
garb = { version = "0.2.6", default-features = false }
# `transfer` feature exposes scalar PQ / HLG / sRGB / BT.709 EOTFs used by
# the source-direct HDR / depth tier (`tier_depth`).
linear-srgb = { version = "0.6.12", features = ["transfer"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[[example]]
name = "corpus_eval"
required-features = ["experimental", "composites"]

[[example]]
name = "edge_skin_bench"
required-features = ["experimental"]

[[example]]
name = "tier1_bench"
required-features = ["experimental", "composites"]

[lints.rust]
unsafe_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("avx512", "optimized-tables"))',
] }

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
debug = true
