[package]
name = "zenanalyze"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
repository = "https://github.com/imazen/zenanalyze"
description = "Image content analyzers (variance, edges, chroma sharpness, DCT energy, derived likelihoods) for adaptive codec decisions. Pulls rows on demand from any zenpixels PixelSlice."
keywords = ["image", "analysis", "features", "codec", "saliency"]
categories = ["multimedia::images"]
authors = ["Lilith River <lilith@imazen.io>"]
rust-version = "1.93"
readme = "README.md"

[lib]
name = "zenanalyze"

[features]
default = []
# Opt-in to features whose mathematical definition or numeric scale
# may change in 0.1.x patches. Stable features (those with at least
# one in-tree consumer in coefficient / zenjpeg / zenwebp as of
# 0.1.0) ship without this flag; numeric drift on stable features is
# governed by the crate-level threshold contract — `experimental` is
# for *structural* uncertainty (no consumer pinned the meaning yet,
# or the metric is research-stage).
experimental = []
# Opt-in to HDR / wide-gamut / depth features (10 features, ids
# 32–39, 46, 47). Off by default — every default sweep corpus is
# SDR-only so the analyzer hot path skips the source-direct depth
# tier entirely. Codecs that handle PQ / HLG / 10-bit / wide-gamut
# content opt in. See `tier_depth` for the implementation.
hdr = []

[dependencies]
zenpixels = { version = "0.2.11", default-features = false, features = ["imgref"] }
zenpixels-convert = { version = "0.2.11", default-features = false }
archmage = { version = "0.9.23", features = ["macros", "avx512", "testable_dispatch"] }
magetypes = { version = "0.9.23", features = ["avx512"] }
# `garb` provides SIMD pixel-format conversions (`rgba_to_rgb`,
# `bgra_to_rgb`, etc.) via `archmage::incant!` — used by the
# `RowStream::StripAlpha8` fast path. Measured ~7× speedup over the
# in-tree scalar strip on a 2048-px row (0.13 µs vs 0.94 µs at 4 MP).
garb = { version = "0.2.7", default-features = false, features = ["experimental"] }
# `transfer` feature exposes scalar PQ / HLG / sRGB / BT.709 EOTFs used by
# the source-direct HDR / depth tier (`tier_depth`).
linear-srgb = { version = "0.6.12", features = ["transfer"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[[example]]
name = "corpus_eval"
required-features = ["experimental"]

[[example]]
name = "edge_skin_bench"
required-features = ["experimental"]

[[example]]
name = "tier1_bench"
required-features = ["experimental"]

[[example]]
name = "tier3_fingerprint_bench"
required-features = ["experimental"]

[[example]]
name = "per_feature_cost"
required-features = ["experimental"]

[[example]]
name = "grayscale_perf"

[[example]]
name = "extract_features_for_picker"

[lints.rust]
# zenanalyze ships zero `unsafe` blocks; SIMD goes through the
# safe-token wrappers in archmage / magetypes. Forbidding here
# keeps the door shut against well-meaning PRs that want to drop
# raw `_mm_*` / `vld*` intrinsics into hot loops (see closed #17
# for the recent example). If a future kernel genuinely needs an
# intrinsic that magetypes hasn't wrapped yet, the right play is
# to upstream the wrapper, not relax this lint.
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("avx512", "optimized-tables"))',
] }

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
debug = true

# Even debug / `cargo test` builds run optimization. The crate has
# pixel-loop SIMD kernels that take 30-100x longer at opt-level=0,
# which makes the unit-test suite slow enough that timing-based
# tripwires (the "stride sampling didn't break" perf assertion) fire
# spuriously on weaker runners. opt-level=2 keeps debug info but
# enables the same SIMD codegen as release.
[profile.dev]
opt-level = 2
debug = true

[workspace]
members = ["zenpicker", "zenpredict"]
resolver = "3"
