[package]
name = "zenpredict-bake"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/zenanalyze"
description = "ZNPR v3 bake-side composer + JSON-input baker for zenpredict. Separate crate so consumers loading pre-baked `.bin` blobs via `include_bytes!` don't link serde_json into their runtime."
keywords = ["mlp", "inference", "zero-copy", "bake", "znpr"]
categories = ["multimedia::images", "encoding"]
authors = ["Lilith River <lilith@imazen.io>"]
rust-version = "1.93"
readme = "README.md"

[lib]
name = "zenpredict_bake"

[features]
default = ["std"]
# `std::error::Error` impls for `BakeError`. The composer itself is
# `no_std + alloc` compatible.
std = []
# Emit LZ4-block-compressed i8 weight sections (`WeightDtype::I8Lz4`).
# Pulls in `lz4_flex` as the encoder. The runtime crate `zenpredict`
# has a matching `compressed-weights` feature that vendors the decoder
# in-tree; this feature activates the matching enum variant on the
# zenpredict dep so the I8Lz4 byte (3) is part of the visible enum.
lz4 = ["dep:lz4_flex", "zenpredict/compressed-weights"]

[[bin]]
name = "zenpredict-bake"
path = "src/bin/zenpredict_bake.rs"

[[bin]]
name = "zenpredict-inspect"
path = "src/bin/zenpredict_inspect.rs"

[dependencies]
# The reader side: zenpredict-bake round-trips against the parser
# in its own tests, and the JSON-bake CLI parses + verifies the bake
# before writing.
zenpredict = { version = "0.2.0", path = "../zenpredict", default-features = false, features = ["std"] }
bytemuck = { version = "1.25.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
# LZ4 encoder for the `lz4` feature. Pulled in only when emitting
# I8Lz4 bakes; the runtime crate doesn't depend on it (vendored
# decoder lives in zenpredict/src/lz4_block.rs).
lz4_flex = { version = "0.13.1", default-features = false, features = ["safe-encode"], optional = true }

[dev-dependencies]
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng", "small_rng"] }
zenbench = "0.1.8"
# Lifecycle / safety / output-specs integration tests cover the
# advanced subsystems (rescue, safety, output_specs, top_k argmin
# variants). Re-pull zenpredict with `advanced` enabled for tests
# only; runtime consumers of zenpredict-bake (the JSON-bake CLI)
# don't need advanced API.
zenpredict = { version = "0.2.0", path = "../zenpredict", default-features = false, features = ["std", "advanced"] }

[[bench]]
name = "predict"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
