[package]
name = "zenpredict-bake"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/zenanalyze"
description = "ZNPR v3 bake-side composer + JSON-input baker for zenpredict. Separate crate so consumers loading pre-baked `.bin` blobs via `include_bytes!` don't link serde_json into their runtime."
keywords = ["mlp", "inference", "zero-copy", "bake", "znpr"]
categories = ["multimedia::images", "encoding"]
authors = ["Lilith River <lilith@imazen.io>"]
rust-version = "1.93"
readme = "README.md"
exclude = [
  # Integration tests and benches — local-only, not useful to crates.io consumers
  "tests/**",
  "benches/**",
]

[lib]
name = "zenpredict_bake"

[features]
default = ["std"]
# `std::error::Error` impls for `BakeError`. The composer itself is
# `no_std + alloc` compatible.
std = []
# Pulls `parquet` + `arrow` so the `fit_yeo_johnson` MLE binary can
# read training-corpus parquets. Off by default — keeps the lean
# composer/JSON-bake build free of columnar-format crates. Enable
# with `cargo build -p zenpredict-bake --features fit-yj
# --bin fit_yeo_johnson`.
fit-yj = ["dep:parquet", "dep:arrow"]

[[bin]]
name = "zenpredict-bake"
path = "src/bin/zenpredict_bake.rs"

[[bin]]
name = "zenpredict-inspect"
path = "src/bin/zenpredict_inspect.rs"

[[bin]]
name = "zenpredict"
path = "src/bin/zenpredict.rs"

[[bin]]
name = "fit_yeo_johnson"
path = "src/bin/fit_yeo_johnson.rs"
required-features = ["fit-yj"]

[dependencies]
# The reader side: zenpredict-bake round-trips against the parser
# in its own tests, and the JSON-bake CLI parses + verifies the bake
# before writing.
zenpredict = { version = "0.2.0", path = "../zenpredict", default-features = false, features = ["std"] }
bytemuck = { version = "1.25.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
# LZ4 encoder. Always pulled — whole-bake compression is built
# into bake() unconditionally, gated by BakeRequest.compressed.
# `lz4_flex::block::compress` is pure-safe-Rust + no_std.
lz4_flex = { version = "0.11.6", default-features = false, features = ["safe-encode"] }
# Optional: parquet/arrow for the `fit_yeo_johnson` MLE binary.
# Gated behind the `fit-yj` feature.
parquet = { version = "58.3.0", default-features = false, features = ["arrow", "zstd"], optional = true }
arrow = { version = "58.3.0", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng", "small_rng"] }
zenbench = "0.1.8"
# Lifecycle / safety / output-specs integration tests cover the
# advanced subsystems (rescue, safety, output_specs, top_k argmin
# variants). Re-pull zenpredict with `advanced` enabled for tests
# only; runtime consumers of zenpredict-bake (the JSON-bake CLI)
# don't need advanced API.
zenpredict = { version = "0.2.0", path = "../zenpredict", default-features = false, features = ["std", "advanced"] }

[[bench]]
name = "predict"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
