[package]
name = "zenpredict"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/zenanalyze"
description = "Zero-copy MLP runtime: parse a packed binary model (ZNPR v3), run scaler + forward pass, surface typed metadata, run masked argmin for codec-config selection. Core of zenjpeg/zenwebp/zenavif/zenjxl picker selection and zensim perceptual distance. Bake-side composer lives in the sibling `zenpredict-bake` crate."
keywords = ["mlp", "inference", "zero-copy", "no-std"]
categories = ["multimedia::images", "no-std"]
authors = ["Lilith River <lilith@imazen.io>"]
rust-version = "1.93"
readme = "README.md"

[lib]
name = "zenpredict"

[features]
default = ["std"]
# `std::error::Error` impls and `f32::exp` for the linear-domain
# argmin transform. `no_std + alloc` builds drop these — score
# transforms beyond `Identity` will currently silently degrade (see
# `argmin::ScoreTransform::Exp` docs).
std = []
# Advanced runtime extras for picker pipelines: typed multi-output
# API (`output_spec::*`, `predict_with_specs*`), bake-time safety
# metadata reader (`safety::*`), two-shot rescue framework
# (`rescue::*`), and cached top-K argmin / scorer hybrids
# (`argmin_masked_top_k*`, `pick_with_confidence*`,
# `*_with_scorer*`). The wire format parses these sections
# unconditionally — gating only controls the typed Rust API. Codec
# runtimes that only call `predict` / `argmin_masked` stay lean by
# default; per-codec pickers that need the extras opt in.
advanced = []

[dependencies]
# Zero-copy byte → typed slice reinterpret without `unsafe` in our
# tree. Tiny, no_std, well-audited.
bytemuck = { version = "1.25.0", default-features = false, features = ["derive"] }
# `f32::ln` / `f32::ln_1p` are not in `core`. Use `libm` on
# `no_std` builds only; `std` builds use the (faster) intrinsic-
# backed `f32` methods.
libm = { version = "0.2.16", default-features = false }

[dev-dependencies]
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng", "small_rng"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
